src/styles/MoreDropdown.module.css
/* Dropdown Styling */

.DropdownItem {
    display: inline-block;
    max-width: 50%;
    padding: 5px 10px; 
    color: #242a3d; 
    font-size: 0.9rem; 
    text-align: left; 
    border-radius: 5px; 
    transition: background-color 0.3s ease; 
  }
  
  .DropdownItem:hover {
    background-color: #f1f3f5; 
    color: #2142b2; 
    cursor: pointer; 
  }
  
  .Absolute {
    position: absolute;
    right: 0;
    z-index: 1050; 
    background-color: #ffffff; 
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
    border-radius: 8px; 
    overflow: hidden;
  }

